--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,8 +88,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        
 
       - name: Docker login
         uses: docker/login-action@v2
@@ -108,6 +107,11 @@ jobs:
           BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
+
+
       - name: Get changed files in PR
         id: changed
         run: |
@@ -125,18 +129,37 @@ jobs:
           echo "Changed files:"
           echo "$CHANGED"
 
+      - name: Run Trivy scan on changed files
+        if: steps.changed.outputs.all_changed_files != ''
+        run: |
+          echo "Changed files: ${{ steps.changed.outputs.all_changed_files }}"
+          for file in ${{ steps.changed.outputs.all_changed_files }}; do
+            echo "🔍 Scanning $file..."
+            trivy fs --quiet \
+              --ignore-unfixed \
+              --pkg-types os,library \
+              --severity HIGH,CRITICAL \
+              --format template --template "@.github/workflows/markdown.tpl" \
+              --output trivy-reports/$(basename "$file").md "$file" || true
+          done
 
-      - name: Run Trivy scan
-        id: trivy
-        uses: aquasecurity/trivy-action@0.24.0
-        with:
-          scan-type: 'filesystem'
-          scan-ref: '${{ steps.changed.outputs.changed_files }}'
-          format: 'template'
-          template: '@markdown.tpl'
-          output: 'trivy-report.md'
-          severity: 'HIGH,CRITICAL'
-          ignore-unfixed: true
+          # Merge all reports into one file
+          echo "# Trivy Security Scan Report" > trivy-report.md
+          echo "" >> trivy-report.md
+          cat trivy-reports/*.md >> trivy-report.md
+
+  
+      # - name: Run Trivy scan
+      #   id: trivy
+      #   uses: aquasecurity/trivy-action@0.24.0
+      #   with:
+      #     scan-type: 'filesystem'
+      #     scan-ref: '${{ steps.changed.outputs.changed_files }}'
+      #     format: 'template'
+      #     template: '@markdown.tpl'
+      #     output: 'trivy-report.md'
+      #     severity: 'HIGH,CRITICAL'
+      #     ignore-unfixed: true
 
       - name: Comment PR with audit results
         continue-on-error: true
