--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,7 @@ jobs:
 
       - name: Get changes
         run: |
+          git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
           git diff --name-only ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }}
           if ${{ github.event_name == 'pull_request' }}; then
               echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
