--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   lint:
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -40,7 +40,7 @@ jobs:
         run: npm run lint
 
   sonarqube:
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -74,7 +74,7 @@ jobs:
           pull_request_number: ${{ github.event.number }}
 
   review:
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Placeholder for code review
@@ -83,21 +83,11 @@ jobs:
           echo "Future implementation: AI-powered review for architecture, security, and best practices"
 
   scan: 
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Docker login
-        uses: docker/login-action@v2
-        env:
-          DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
-        if: "${{ env.DOCKER_USERNAME != '' }}"
-        with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract branch name
         id: extract_branch
@@ -107,91 +97,82 @@ jobs:
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
       - name: Get changes
+        id: changes
         run: |
           git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
-          git diff --name-only origin/${{ github.event.pull_request.base.ref }} ${{ github.ref }}
-          if ${{ github.event_name == 'pull_request' }}; then
-              echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
-          else
-              echo "changed_files=$(git diff --name-only ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }} | xargs)" >> $GITHUB_OUTPUT
-          fi
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD)
+          mkdir -p scan-targets
+          for file in $CHANGED_FILES; do
+            if [[ -f "$file" ]]; then
+              mkdir -p "changed_files/$(dirname "$file")"
+                cp "$file" "changed_files/$file"
+              fi
+          done
+          echo "changed_files=$(echo $CHANGED_FILES)" >> $GITHUB_OUTPUT
 
 
-
-
-      - name: Run Trivy scan
+      - name: Run Trivy scan on changed files
         id: trivy
+        if: steps.changes.outputs.changed_files != ''
         uses: aquasecurity/trivy-action@0.24.0
+        continue-on-error: true
         with:
           scan-type: 'filesystem'
-          scan-ref: '.'
+          scan-ref: './changed_files'
           format: 'template'
-          template: '@markdown.tpl'
+          template: '@fs-markdown.tpl'
           output: 'trivy-report.md'
           severity: 'HIGH,CRITICAL'
           ignore-unfixed: true
-
+          trivyignores: .trivyignore
+          exit-code: 1
+      
       - name: Comment PR with audit results
-        continue-on-error: true
-        uses: marocchino/sticky-pull-request-comment@v2
+        uses: peter-evans/create-or-update-comment@v4
+        if: always() 
         with:
-          recreate: true
-          path: trivy-report.md
+          token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: trivy-report.md
 
-  security:
-    if: github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # - name: Comment PR with audit results
+      #   continue-on-error: true
+      #   if: steps.changes.outputs.changed_files != ''
+      #   uses: marocchino/sticky-pull-request-comment@v2
+      #   with:
+      #     recreate: true
+      #     path: trivy-report.md
+      
+      - name: Build Docker image for scanning
+        run: |
+          docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
 
-      - name: Run dependency review
-        id: review
-        continue-on-error: true
-        uses: actions/dependency-review-action@v4
+      - name: Run Trivy scan on docker images
+        id: trivy-docker
+        uses: aquasecurity/trivy-action@0.24.0
         with:
-          comment-summary-in-pr: always
-          vulnerability-check: true
+          scan-type: 'image'
+          image-ref: 'flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}'
+          format: 'template'
+          template: '@docker-markdown.tpl'
+          output: 'trivy-docker-report.md'
+          severity: 'HIGH,CRITICAL'
+          ignore-unfixed: true
+          trivyignores: .trivyignore
+          exit-code: 1
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc
-
-      - name: Dependency review result
-        id: deps
-        run: |
-          echo "Dependency review completed. See above for details."
-          echo "Vulnerabilities found: ${{ steps.review.outputs.comment-content }}"
-          echo "${{ steps.review.outputs.comment-content}}" > input.html
-          sed -e '/<h2>OpenSSF Scorecard<\/h2>/,/<h2>/{
-            /<h2>OpenSSF Scorecard<\/h2>/!{
-              /<h2>/!d
-            }
-          }' \
-          -e '/<h2>Scanned Files<\/h2>/,/<h2>/{
-            /<h2>Scanned Files<\/h2>/!{
-              /<h2>/!d
-            }
-          }' input.html > filtered.html || cp report.html filtered.html
-
-          pandoc -f html -t gfm -o deps-summary.md filtered.html
-          
-          cat deps-summary.md
-          cat deps-summary.md > TEMP
-          echo $TEMP >> $GITHUB_OUTPUT
-
-
+    
       - name: Comment PR with audit results
-        continue-on-error: true
-        uses: marocchino/sticky-pull-request-comment@v2
+        uses: peter-evans/create-or-update-comment@v4
+        if: always() 
         with:
-          recreate: true
-          path: deps-summary.md
+          token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: trivy-docker-report.md
 
           
   test:
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
