--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,21 +107,18 @@ jobs:
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
       - name: Get changes
+        id: changes
         run: |
           git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
           git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD
           echo "changed_files=$(git diff --name-only ${{ github.event.pull_request.base.ref }} HEAD | xargs)" >> $GITHUB_OUTPUT
-
-          
-
-
 
       - name: Run Trivy scan
         id: trivy
         uses: aquasecurity/trivy-action@0.24.0
         with:
           scan-type: 'filesystem'
-          scan-ref: '.'
+          scan-ref: '${{ steps.changes.outputs.changed_files }}'
           format: 'template'
           template: '@markdown.tpl'
           output: 'trivy-report.md'
