--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,8 +110,7 @@ jobs:
         id: changes
         run: |
           git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
-          git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD
-          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.ref }} HEAD)
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD)
           mkdir -p scan-targets
           for file in $CHANGED_FILES; do
             dir=$(dirname "$file")
