--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.24.0
         with:
           scan-type: 'filesystem'
-          scan-ref: '${{ steps.changes.outputs.changed_files }}'
+          scan-ref: './changed_files'
           format: 'template'
           template: '@markdown.tpl'
           output: 'trivy-report.md'
