--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.24.0
         with:
           scan-type: 'image'
-          scan-ref: '${{vars.DOCKER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/flask-react-app:${{steps.extract_branch.outputs.branch_hash}}'
+          image-ref: '${{vars.DOCKER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/flask-react-app:${{steps.extract_branch.outputs.branch_hash}}'
           format: 'template'
           template: '@markdown.tpl'
           output: 'trivy-docker-report.md'
