--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 bcrypt = "==4.0.1"
 certifi = "==2023.11.17"
 flask = "==3.0.0"
-flask-cors = "==3.0.0"
+flask-cors = "==4.0.0"
 gunicorn = "==21.2.0"
 phonenumbers = "==8.13.44"
 pyjwt = "==2.8.0"
@@ -33,8 +33,8 @@ types-flask-cors = "==4.0.0.1"
 types-pyyaml = "==6.0.12.12"
 types-requests = "==2.31.0.10"
 vulture = "==2.10"
-autoflake = "==2.3.1"
 pylint = "*"
+autoflake = "*"
 
 [requires]
 python_version = "3.12"
