--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ name = "pypi"
 bcrypt = "==4.0.1"
 certifi = "==2023.11.17"
 flask = "==3.0.0"
-flask-cors = "==4.0.2"
-gunicorn = "==22.0.0"
+flask-cors = "==4.0.0"
+gunicorn = "==21.2.0"
 phonenumbers = "==8.13.44"
 pyjwt = "==2.8.0"
 pydantic = "==2.4"
@@ -19,10 +19,9 @@ requests = "==2.31.0"
 sendgrid = "==6.11.0"
 tomli = "==2.0.1"
 twilio = "==9.2.4"
-waitress = "==3.0.1"
+waitress = "==2.1.2"
 datadog-api-client = "==2.31.0"
 temporalio = "==1.10.0"
-protobuf = "==5.29.5"
 
 [dev-packages]
 black = "==24.8.0"
@@ -34,8 +33,8 @@ types-flask-cors = "==4.0.0.1"
 types-pyyaml = "==6.0.12.12"
 types-requests = "==2.31.0.10"
 vulture = "==2.10"
+autoflake = "==2.3.1"
 pylint = "*"
-autoflake = "*"
 
 [requires]
 python_version = "3.12"
