--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,8 +143,29 @@ jobs:
         with:
           recreate: true
           path: trivy-report.md
-
       
+      - name: Build Docker image for scanning
+        run: |
+          docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
+
+      - name: Run Trivy scan on docker images
+        id: trivy-docker
+        uses: aquasecurity/trivy-action@0.24.0
+        with:
+          scan-type: 'image'
+          image-ref: 'flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}'
+          format: 'template'
+          template: '@markdown.tpl'
+          output: 'trivy-docker-report.md'
+          severity: 'HIGH,CRITICAL'
+          ignore-unfixed: true
+    
+      - name: Comment PR with docker image results
+        continue-on-error: true
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          recreate: true
+          path: trivy-docker-report.md
 
           
   test:
