--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "clsx": "^2.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
-    "cpx": "^1.5.0",
+    "cpx": "^1.2.1",
     "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.5",
     "google-libphonenumber": "^3.2.38",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.20",
     "mini-css-extract-plugin": "^2.8.1",
     "path": "^0.12.7",
     "postcss": "^8.4.35",
@@ -83,7 +83,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.2",
-    "forever": "^4.0.3",
+    "forever": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^9.1.4",
     "js-yaml": "^4.1.0",
@@ -100,7 +100,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^5.8.0"
   }
 }
