--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.5",
     "google-libphonenumber": "^3.2.38",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.20",
     "mini-css-extract-plugin": "^2.8.1",
     "path": "^0.12.7",
     "postcss": "^8.4.35",
