--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,14 +126,20 @@ jobs:
           trivyignores: .trivyignore
 
       
-
       - name: Comment PR with audit results
-        continue-on-error: true
-        if: steps.changes.outputs.changed_files != ''
-        uses: marocchino/sticky-pull-request-comment@v2
+        uses: peter-evans/create-or-update-comment@v4
         with:
-          recreate: true
-          path: trivy-report.md
+          token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: trivy-report.md
+
+      # - name: Comment PR with audit results
+      #   continue-on-error: true
+      #   if: steps.changes.outputs.changed_files != ''
+      #   uses: marocchino/sticky-pull-request-comment@v2
+      #   with:
+      #     recreate: true
+      #     path: trivy-report.md
       
       - name: Build Docker image for scanning
         run: |
