added a dependency review

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,7 @@ jobs:
       
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
+        if: always() 
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
@@ -163,6 +164,7 @@ jobs:
     
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
+        if: always() 
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
