--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -16,8 +16,9 @@ services:
         condition: service_started
       temporal:
         condition: service_healthy
+    # Use named volume to avoid permission issues with bind mounts
     volumes:
-      - ./output:/app/output
+      - test_output:/app/output
 
   app-db:
     image: mongo:5.0
@@ -61,3 +62,7 @@ services:
       POSTGRES_USER: 'temporal'
     ports:
       - '5432:5432'
+
+# Define named volume for test output
+volumes:
+  test_output:
