--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
 
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
-        if: steps.trivy-docker.outputs.scan_result == 'vulnerabilities_found'
+        if: always()
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
