--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
       
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
-        if: steps.trivy.outputs.scan_result == 'vulnerabilities_found'
+        if: always()
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
