--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,13 +101,14 @@ jobs:
         run: |
           git fetch origin ${{ github.event.pull_request.base.ref }} --depth=1
           CHANGED_FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD)
-          mkdir -p scan-targets
           for file in $CHANGED_FILES; do
             if [[ -f "$file" ]]; then
               mkdir -p "changed_files/$(dirname "$file")"
                 cp "$file" "changed_files/$file"
               fi
           done
+          echo $CHANGED_FILES
+          ls changed_files/
           echo "changed_files=$(echo $CHANGED_FILES)" >> $GITHUB_OUTPUT
 
 
