--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
       
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
-        if: always() && steps.trivy.outputs.vulnCount != '0'
+        if: always()
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
@@ -158,7 +158,7 @@ jobs:
     
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@v4
-        if: always() && steps.trivy.outputs.vulnCount != '0'
+        if: always()
         with:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
