--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.4.2",
     "tailwindcss": "^3.4.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "braces": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
