--- a/package.json
+++ b/package.json
@@ -59,9 +59,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.4.2",
-    "tailwindcss": "^3.4.1",
-    "yup": "^1.3.3",
-    "braces": "^3.0.3"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
