--- a/package.json
+++ b/package.json
@@ -105,7 +105,9 @@
   },
   "overrides": {
     "braces": "3.0.3",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "babel-traverse": "6.26.0",
+    "nconf" : "0.11.3"
   }
 
 }
