chore: revert a change in package.json

--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^5.8.0"
+  },
+  "overrides": {
+    "braces": "3.0.3"
   }
 }
-
