--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,35 +131,35 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body-path: trivy-report.md
 
-      - name: Build Docker image for scanning
-        run: |
-          docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
+      # - name: Build Docker image for scanning
+      #   run: |
+      #     docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
 
-      - name: Run Trivy scan on docker images
-        id: trivy_docker
-        uses: aquasecurity/trivy-action@0.33.0
-        continue-on-error: true
-        with:
-          scan-type: 'image'
-          image-ref: 'flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}'
-          format: 'template'
-          template: '@docker-markdown.tpl'
-          output: 'trivy-docker-report.md'
-          severity: 'HIGH,CRITICAL'
-          ignore-unfixed: true
-          trivyignores: ".trivyignore"
-          exit-code: 1
+      # - name: Run Trivy scan on docker images
+      #   id: trivy_docker
+      #   uses: aquasecurity/trivy-action@0.33.0
+      #   continue-on-error: true
+      #   with:
+      #     scan-type: 'image'
+      #     image-ref: 'flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}'
+      #     format: 'template'
+      #     template: '@docker-markdown.tpl'
+      #     output: 'trivy-docker-report.md'
+      #     severity: 'HIGH,CRITICAL'
+      #     ignore-unfixed: true
+      #     trivyignores: ".trivyignore"
+      #     exit-code: 1
           
-      - name: Comment PR with audit results
-        uses: peter-evans/create-or-update-comment@v4
-        if: steps.trivy_docker.outcome == 'failure'
-        with:
-          token: ${{ secrets.TRIVY_SCAN_TOKEN }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body-path: trivy-docker-report.md
+      # - name: Comment PR with audit results
+      #   uses: peter-evans/create-or-update-comment@v4
+      #   if: steps.trivy_docker.outcome == 'failure'
+      #   with:
+      #     token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+      #     issue-number: ${{ github.event.pull_request.number }}
+      #     body-path: trivy-docker-report.md
       
       - name: Fail job if Trivy found issues
-        if: steps.trivy.outcome == 'failure' || steps.trivy_docker.outcome == 'failure' 
+        if: steps.trivy.outcome == 'failure' 
         run: |
           echo "❌ Trivy found vulnerabilities — failing the job."
           exit 1
