--- a/package.json
+++ b/package.json
@@ -101,10 +101,12 @@
     "typescript": "^4.4.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^5.2.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
   "overrides": {
-    "braces": "3.0.3"
+    "braces": "3.0.3",
+    "minimist": "^1.2.8",
+    "nconf": "0.11.4"
   }
 }
