--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "cpx": "^1.5.0",
     "eslint-config-prettier": "^9.1.0",
     "forever": "^4.0.3",
     "formik": "^2.4.5",
