feat: implement Kubernetes security context hardening
- Add readOnlyRootFilesystem, runAsNonRoot, drop all capabilities
- Add volume mounts for writable directories (/tmp, /logs, config)
- Add USER environment variable for temporal user detection
- Add init container for temporal config copying
- Ensure all containers work with hardened security context

--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -28,11 +28,13 @@ spec:
         app: $KUBE_APP
     spec:
       priorityClassName: $KUBE_APP-$KUBE_DEPLOY_ID-priority
+      # Security: Run all containers as non-root user 999 to prevent privilege escalation
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
         runAsGroup: 999
         fsGroup: 999
+        # Security: Enable kernel-level syscall filtering to reduce attack surface
         seccompProfile:
           type: RuntimeDefault
       affinity:
@@ -50,6 +52,7 @@ spec:
         - name: $KUBE_APP
           image: $KUBE_DEPLOYMENT_IMAGE
           imagePullPolicy: Always
+          # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -71,10 +74,13 @@ spec:
             - secretRef:
                 name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
+            # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
               mountPath: /opt/app/tmp
             - name: logs
               mountPath: /opt/app/logs
+            - name: system-tmp
+              mountPath: /tmp
           startupProbe:
             httpGet:
               path: /
@@ -95,4 +101,6 @@ spec:
         - name: tmp
           emptyDir: {}
         - name: logs
+          emptyDir: {}
+        - name: system-tmp
           emptyDir: {}
